--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "npm-run-all": "^4.1.5"
   },
   "scripts": {
+    "api_server": "python api/server.py",
     "server": "python server.py",
     "sync": "gulp",
-    "dev": "npm-run-all --parallel server sync"
+    "dev": "npm-run-all --parallel api_server server sync"
   }
 }
