--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
-  "resolutions": {
-    "axios": "0.19.0"
+  "scripts": {
+    "start": "webpack-dev-server --hot --inline"
   },
   "devDependencies": {
-    "browser-sync": "^2.26.5",
-    "gulp": "^4.0.2",
-    "npm-run-all": "^4.1.5"
-  },
-  "scripts": {
-    "server": "python server.py",
-    "sync": "gulp",
-    "dev": "npm-run-all --parallel server sync"
+    "@babel/core": "^7.5.0",
+    "@babel/preset-env": "^7.5.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.0.0",
+    "material-design-icons-iconfont": "^5.0.1",
+    "style-loader": "^0.23.1",
+    "url-loader": "^2.0.1",
+    "vue": "^2.6.10",
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify": "^1.5.16",
+    "ts-loader": "^6.0.4",
+    "typescript": "^3.5.3",
+    "webpack": "^4.35.2",
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
-    "yarn": "^1.16.0"
+    "babel-polyfill": "^6.26.0"
   }
 }
